tests-integration/fixtures/checking/286_wildcard_arity/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
example :: Int -> Int

Types

Diagnostics
error[TooManyBinders]: Too many binders: expected 1, got 3
  --> 3:1..3:20
  |
3 | example :: Int -> _
  | ^~~~~~~~~~~~~~~~~~~
